RESOLVED FIXED172974
struct does not accept initializer-form if member has initializers in GCC 4.9
https://bugs.webkit.org/show_bug.cgi?id=172974
Summary struct does not accept initializer-form if member has initializers in GCC 4.9
Yusuke Suzuki
Reported 2017-06-06 07:08:21 PDT
struct does not accept initializer-form if member has initializers in GCC 4.9
Attachments
Patch (2.15 KB, patch)
2017-06-06 07:10 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2017-06-06 07:10:56 PDT
Carlos Garcia Campos
Comment 2 2017-06-06 07:15:07 PDT
Comment on attachment 312070 [details] Patch LGTM, thanks!
WebKit Commit Bot
Comment 3 2017-06-06 07:54:00 PDT
Comment on attachment 312070 [details] Patch Clearing flags on attachment: 312070 Committed r217829: <http://trac.webkit.org/changeset/217829>
WebKit Commit Bot
Comment 4 2017-06-06 07:54:02 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 5 2017-06-06 10:58:41 PDT
Thanks!
Note You need to log in before you can comment on or make changes to this bug.